# PyNOF

./: C.data  C.npy  Comb.py  ID.py  Ip.py  PNOFi.ipynb  PNOFi_con_gammas.ipynb  PNOFi_con_gammas.py  PNOFi_sin_gammas.ipynb  README.md  Rotations.py  \  a  a.out  energy.py  fmiug0.npy  gamma.npy  guess.py  integrals.old  integrals.py  integrals_cu.py  intjit.py  main.py  main_E.py  minimization.py  optimization.py  output.prof  output.py  parameters.py  pnof.py  pnof_old.py  postpnof.py  projection.py  pydonof.fchk  pydonof_C.npy  pydonof_fmiug0.npy  pydonof_gamma.npy  pynof.fchk  pynof_C.npy  pynof_fmiug0.npy  (+36 more)
PyNOF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
__pycache__/: integrals.JKH_MO_Full_jit-270.py37m.1.nbc  integrals.JKH_MO_Full_jit-270.py37m.nbi  integrals.JKH_MO_Full_jit-271.py37m.1.nbc  integrals.JKH_MO_Full_jit-271.py37m.nbi  integrals.JKH_MO_RI_jit-332.py37m.1.nbc  integrals.JKH_MO_RI_jit-332.py37m.nbi  integrals.JKH_MO_RI_jit-333.py37m.1.nbc  integrals.JKH_MO_RI_jit-333.py37m.nbi  integrals.JKj_Full_jit-116.py37m.1.nbc  integrals.JKj_Full_jit-116.py37m.2.nbc  integrals.JKj_Full_jit-116.py37m.nbi  integrals.JKj_RI_jit-153.py37m.1.nbc  integrals.JKj_RI_jit-153.py37m.2.nbc  integrals.JKj_RI_jit-153.py37m.nbi  integrals.JKj_RI_jit-154.py37m.1.nbc  integrals.JKj_RI_jit-154.py37m.2.nbc  integrals.JKj_RI_jit-154.py37m.nbi  integrals.computeJK-6.py37m.1.nbc  integrals.computeJK-6.py37m.2.nbc  integrals.computeJK-6.py37m.nbi  integrals.computeJKH_core_MO-44.py37m.1.nbc  integrals.computeJKH_core_MO-44.py37m.nbi  integrals.compute_D-46.py37m.1.nbc  (+31 more)
(+81 files in other folders)
